Change accordian when expanding or collpasing, fix collapse in class, add temp code for downloading pdf and add confirm modal in book section

--- a/public/css/customStyle.scss
+++ b/public/css/customStyle.scss
@@ -1343,7 +1343,7 @@ body{
 					.writings-rpRow{
 						background-color:#f5f5f5;
 						border:1px solid #D5D4D4;
-						height:160px;
+						height:150px;
 						.writings-content{
 							padding-top:1.6em;
 							h4{
@@ -1359,14 +1359,11 @@ body{
 						.writings-rpHover{
 							display:none;
 							padding-top:1.6em;		
-							background-color:#DA4531;
+							background-color:#1B5F5E;
 							color:white;
 							h4{
+								padding:1em 0 0 0;
 								vertical-align:middle;
-								padding:4px 0 0 0;
-							}
-							h5{
-								padding:2px 0 12px 0;
 							}
 						}
 					}
